--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,14 @@
         </dependency>
 
 
+        <!-- redis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+
 
 
 
